[project]
name = "langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.2",
    "langsmith>=0.8.7",
    "notebook>=7.5.6",
    "python-dotenv>=1.2.2",
]
